@@ -6,6 +6,8 @@
 	* cvl/cvl_hdr.c, cvl/glsl/hdr/tonemap_ashikhmin02_step1.glsl,
 	cvl/glsl/hdr/tonemap_ashikhmin02_step2.glsl: Tweak
 	cvl_tonemap_ashikhmin02().
+	* cvtool/cmd_tonemap.c, doc/cvtool.texi, tests/cmd_tonemap.sh: Add the
+	methods reinhard05, ashikhmin02, reinhard02 to the tonemap command.
 
 2008-01-15  Martin Lambers <marlam@marlam.de>
 
